--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "rig-test-2",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "repository": "git@github.com:FlashHand/rig-test-2.git",
   "author": "Wang Bo <ralwayne@163.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "rig": {
+    "rig-test-1": [
+      "1.0.0",
+      "1.0.1"
+    ]
+  }
 }
