--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "rig-test-2",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": "git@github.com:FlashHand/rig-test-2.git",
   "author": "Wang Bo <ralwayne@163.com>",
-  "license": "MIT",
-  "rig": {
-    "rig-test-1": [
-      "1.0.0",
-      "1.0.1"
-    ]
-  }
+  "license": "MIT"
 }
